--- a/super.html
+++ b/super.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super-Bank</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="login-area">
+        <h1 class="text-center ">Welcome to Super-Bank.</h1>
+        <div  class="submit-button">
+            <h4>Login</h4>
+            <input type="text" placeholder="Email" class="form-control">
+            <br>
+            <input type="password" placeholder="password" class="form-control">
+            <br>
+            <button id="login" class="btn btn-success">Enter</button>
+        </div>
+    </div>
+    <div id="last-area">
+        <h3>second area in the world.</h3>
+    </div>
+    <script>
+        const login = document.getElementById('login');
+            login.addEventListener('click', function(){
+                const hide = document.getElementById('login-area');
+                hide.style.display="none";
+                const area =document.getElementById('last-area');
+                area.style.display ="block";
+            });
+    </script>
 </body>
 </html>
