--- a/super.html
+++ b/super.html
@@ -10,7 +10,7 @@
 <body>
     <div id="login-area">
         <h1 class="text-center ">Welcome to Super-Bank.</h1>
-        <div  class="submit-button">
+        <div class="submit-button">
             <h4>Login</h4>
             <input type="text" placeholder="Email" class="form-control">
             <br>
@@ -20,9 +20,47 @@
         </div>
     </div>
     <div id="last-area">
-        <h3>second area in the world.</h3>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="balance bg-primary">
+                    <h5>Deposit</h5>
+                    <h2>$ <span id="currentDeposit">00</span></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="balance bg-danger">
+                    <h5>withdraw</h5>
+                    <h2>$<span id="currentwithdraw">00</span></h2>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="balance bg-warning">
+                    <h5>balance</h5>
+                    <h2>$<span id="blanceNam">1240</span></h2>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="submit-button">
+                    <h4>Deposit</h4>
+                    <input id="depositAmount" class="form-control" type="text" placeholder="$ amount you want to deposit">
+                    <br>
+                    <button id="deposit" class="btn btn-success">Deposit</button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="submit-button">
+                    <h4>Withdraw</h4>
+                    <input id="withdrawAmount" type="text" class="form-control" placeholder="$ amount your want to withdraw">
+                    <br>
+                    <button id="withdrow" class="btn btn-success">Withdraw</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
+        // login area button
         const login = document.getElementById('login');
             login.addEventListener('click', function(){
                 const hide = document.getElementById('login-area');
@@ -30,6 +68,47 @@
                 const area =document.getElementById('last-area');
                 area.style.display ="block";
             });
+
+        //deposit area button
+        const depositButton =document.getElementById('deposit');
+            depositButton.addEventListener('click',function(){
+                const depositAmount =document.getElementById('depositAmount').value;
+                const depositNam =parseFloat(depositAmount);
+                //necer ta dileo cholbo abr function diya korleo hobe............
+                totalAmount('currentDeposit', depositNam);
+                // const currentDeposit =document.getElementById('currentDeposit').innerText;
+                // const currentDepositNam =parseFloat(currentDeposit);
+                // const totalDeposit = depositNam + currentDepositNam;
+                // document.getElementById('currentDeposit').innerText =totalDeposit;
+                totalAmount('blanceNam',depositNam);
+                //necer ta dileo cholbo abr function diya korleo hobe............
+                // const blanceNam =document.getElementById("blanceNam").innerText;
+                // const blanceNamber =parseFloat(blanceNam);
+                // const totalbalance = blanceNamber + depositNam;
+                // document.getElementById('blanceNam').innerText =totalbalance;
+                document.getElementById('depositAmount').value ="";
+            })
+            function totalAmount(id, depositNam) {
+                const blanceNam =document.getElementById(id).innerText;
+                const blanceNamber =parseFloat(blanceNam);
+                const totalbalance = blanceNamber + depositNam;
+                document.getElementById(id).innerText =totalbalance;
+            }
+            // withdraw area button
+             const withdraw =document.getElementById('withdrow');
+                withdraw.addEventListener('click',function(){
+                const withdrawAmount =document.getElementById('withdrawAmount').value;
+                const withdrawNam =parseFloat(withdrawAmount);
+                totalAmount('currentwithdraw',withdrawNam);
+                current('blanceNam',withdrawNam);
+                document.getElementById('withdrawAmount').value ='';
+             })
+             function current(id,withdrawNam) {
+                const blanceNam =document.getElementById("blanceNam").innerText;
+                const blanceNamber =parseFloat(blanceNam);
+                const totalbalance = blanceNamber - withdrawNam;
+                document.getElementById('blanceNam').innerText =totalbalance;
+             }
     </script>
 </body>
 </html>
